# decision-debt-dawo26

./: .zenodo.json  CHANGELOG.md  CITATION.cff  DATA_LICENSE.md  LICENSE  MANIFEST.sha256  Makefile  README.md  pyproject.toml
data/: capacity_matrix.csv  decision_type_battery.csv  dimension_metadata.csv  liquid_democracy_overlay.csv
docs/: ASSUMPTIONS_AND_LIMITS.md  ZENODO_RELEASE_CHECKLIST.md
outputs/: adequacy_sensitivity_battery.csv  adequacy_sensitivity_random.csv  decision_type_battery.csv  dimension_ablation.csv  dominance_relations.csv  identical_capacity_groups.csv  per_entry_influence.csv  run_log.txt  run_summary.json  scalarisation_table.csv  table2_exhaustive_frontier_counts.csv  table2_frontier_shares.csv  table2_random_frontier_counts.csv  weight_space_stability_battery.csv  worked_example_issuance.csv  worked_example_reform_delta.csv
scripts/: reproduce_section_5_2.py
src/: decision_debt_model.py
tests/: test_decision_debt_model.py
